--- a/client/template/main/uxcoke.html
+++ b/client/template/main/uxcoke.html
@@ -120,6 +120,12 @@
 					</div>
 				</div>
 			</div> 
+
+
+
+			<audio>
+			  <source src="../../open.mp3" type="audio/mpeg" >
+			</audio>
 		</div>
 	</div>
 	
